# nafcodec

./: .gitignore  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python.yml  rust.yml  test.yml
data/: CP040672.naf  LuxC.naf  NZ_AAEN01000029.naf  masked.fna  masked.naf  phix.fastq  phix.naf
naf_rs/: Cargo.toml  LuxC.naf
naf_rs/src/: ennaf.rs  main.rs  unnaf.rs
nafcodec/: Cargo.toml
nafcodec-ffi/: Cargo.toml  naf.h
nafcodec-ffi/src/: lib.rs  lib_old.rs
nafcodec-py/: Cargo.toml  README.md
nafcodec-py/nafcodec/: __init__.py  build.rs  lib.pyi  lib.rs  pyfile.rs
nafcodec-py/nafcodec/tests/: __init__.py  requirements.txt  test_decoder.py  test_doctest.py  test_encoder.py  test_open.py  unittest.rs
nafcodec-py/nafcodec/tests/data/: CP040672.naf  LuxC.naf  NZ_AAEN01000029.naf  masked.naf  phix.naf
nafcodec/src/: data.rs  error.rs  lib.rs
nafcodec/src/decoder/: ioslice.rs  mod.rs  parser.rs  reader.rs
nafcodec/src/encoder/: counter.rs  mod.rs  storage.rs  writer.rs
nafcodec/tests/: dna.rs  encoder.rs  fastq.rs  protein.rs
nafcodec/tests/decoder/: dna.rs  fastq.rs  mod.rs  protein.rs
pkg/aur/: PKGBUILD.in
src/: data.rs  error.rs  lib.rs
src/decoder/: ioslice.rs  mod.rs  parser.rs  reader.rs  tee.rs
tests/: dna.rs  fastq.rs  protein.rs
