[package]
name = "nafcodec-py"
version = "0.2.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "MIT"
description = "PyO3 bindings and Python interface to the nafcodec crate."
repository = "https://github.com/althonos/nafcodec"
homepage = "https://github.com/althonos/nafcodec"
readme = "README.md"
keywords = ["nucleotide", "archive", "biology", "bioinformatics"]
categories = ["science", "parser-implementations", "compression"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "nafcodec/lib.rs"
doctest = false

[dependencies.nafcodec]
path = "../nafcodec"
version = "0.2.0"
features = ["arc"]
[dependencies]
pyo3 = "0.21.1"

[features]
default = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]

[[test]]
name = "unittest"
path = "nafcodec/tests/unittest.rs"
harness = false
