[package]
name = "nafcodec"
version = "0.2.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "MIT"
description = "Rust coder/decoder for Nucleotide Archive Format (NAF) files."
repository = "https://github.com/althonos/nafcodec"
homepage = "https://github.com/althonos/nafcodec"
readme = "README.md"
keywords = ["nucleotide", "archive", "biology", "bioinformatics"]
categories = ["science", "parser-implementations", "compression"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.22"
nom = "7.1.3"
[dependencies.zstd]
version = "0.13.1"
features = ["experimental"]
[dependencies.tempfile]
version = "3.8.1"
optional = true

[features]
default = ["tempfile"]
arc = []
nightly = []
lut = []
simd = ["lut"]

[[test]]
name = "decode"
path = "tests/decoder/mod.rs"
